themes/nox/public/main.css
/* ... */
.post_item .button_container {
	display: flex;
	margin-top: auto;
}
.post_item .action_button {
	margin-right: 5px;
	font-size: 15px;
	color: #dddddd;
	white-space: nowrap;
}
.post_item .action_button_left {
	display: flex;
}
.post_item .action_button_right {
	margin-left: auto;
	display: flex;
}
.post_item .controls:not(.has_likes) .like_count {
	display: none;
}

.action_item .userinfo, .action_item .action_icon {
	display: none;
}
.action_item .content_container {
	padding-top: 12px;
	padding-bottom: 12px;
}
.action_item .content_container span {
	margin-left: auto;
	margin-right: auto;
}

input[type=checkbox] {
	display: none;
}
input[type=checkbox] + label {
	display: inline-flex;
	width: 18px;
	height: 18px;
	margin-bottom: -2px;
	margin-right: 8px;
	border: 1px solid rgb(120,120,120);
	background-color: rgb(90,90,90);
	padding-top: 1px;
	border-radius: 2px;
}
input[type=checkbox]:checked + label .sel {
	width: 8px;
	height: 8px;
	background: rgb(160,160,160);
	margin-left: auto;
	margin-right: auto;
	margin-top: auto;
	margin-bottom: auto;
	border-radius: 2px;
}
.poll_option {
	display: flex;
	margin-bottom: 10px;
}
.poll_option_text {
	line-height: 14px;
}
.poll_buttons {
	padding-top: 4px;
}
.poll_buttons button {
	margin-right: 8px;
}

.add_like:before, .remove_like:before {
	content: "{{index .Phrases "topic.plus_one"}}";
}
.button_container .open_edit:after, .edit_item:after {
	content: "{{index .Phrases "topic.edit_button_text"}}";
}
.delete_item:after {
	content: "{{index .Phrases "topic.delete_button_text"}}";
}
.ip_item_button:after {
	content: "{{index .Phrases "topic.ip_button_text"}}";
}
.lock_item:after {
	content: "{{index .Phrases "topic.lock_button_text"}}";
}
.unlock_item:after {
	content: "{{index .Phrases "topic.unlock_button_text"}}";
}
.pin_item:after {
	content: "{{index .Phrases "topic.pin_button_text"}}";
}
.unpin_item:after {
	content: "{{index .Phrases "topic.unpin_button_text"}}";
}
.report_item:after {
	content: "{{index .Phrases "topic.report_button_text"}}";
}
.like_count:after {
	content: " likes";
}

.topic_reply_container {
	display: flex;
}

.footer .widget {
	padding: 12px;
	border-bottom: 1px solid #555555;
}
#poweredByHolder {
	display: flex;
	padding: 12px;
	padding-left: 16px;
	padding-right: 16px;
}
#poweredBy {
	margin-right: auto;
}
.footer .widget, #poweredByHolder {
	background-color: #444444;
}

@media(max-width: 500px) {
	.sidebar {
		display: none;
	}
	
	.post_item .content_container {
		background-color: transparent;
		padding: 0px;
	}
	.post_item .user_content {
		background-color: #444444;
		padding: 16px;
	}
	.post_item .button_container {
		display: block;
		margin-top: 8px;
	}
	.post_item .action_button_left {
		display: block;
		background-color: #444444;
		padding: 10px;
	}
	.post_item .action_button_right {
		background-color: #444444;
		padding: 10px;
		padding-left: 14px;
		/*padding-right: 12px;*/
		margin-top: 8px;
	}
	.post_item .controls:not(.has_likes) .like_count {
		display: inline;
	}
	.post_item .created_at {
		margin-left: auto;
	}
	.post_item, .topic_reply_container {
		flex-direction: column;
	}
	.userinfo {
		margin-right: 0px;
		width: auto;
		flex-direction: row;
		margin-bottom: 12px;
		padding: 18px;
		padding-bottom: 14px;
	}
	.avatar_item {
		height: 46px;
		width: 46px;
		margin-left: 0px;
		margin-right: 0px;
	}
	.user_meta {
		margin-left: 10px;
		margin-top: -4px;
	}
}

@media(max-width: 600px) {
	.rowhead h1, .opthead h1, .colstack_head h1 {
		font-size: 19px;
	}
	.topic_list_title_block .opt {
		margin-top: -1px;
	}
	.topic_list_title_block .opt a {
		font-size: 16px;
	}

	.topic_list .topic_middle {
		display: none;
	}
	.topic_left, .topic_right, .topic_middle {
		width: 50%;
	}
	.topic_right_inside .lastName, .topic_left .rowtopic {
		margin-top: -4px;
	}
	.topic_left img, .topic_right img {
		height: 32px;
		width: 32px;
	}
	.topic_list .topic_right_inside .lastReplyAt, .topic_list .topic_left .starter {
		white-space: nowrap;
	}

	.userinfo {
		padding: 18px;
		width: 140px;
	}
	.avatar_item {
		height: 48px;
		width: 48px;
		background-size: 68px;
	}
	.the_name {
		font-size: 17px;
	}
	.ip_item.hide_on_mobile {
		display: none;
	}
}

@media(max-width: 601px) {
	ul {
		padding-left: 14px;
	}
	li a {
		padding-bottom: 6px;
		font-size: 15px;
		color: #bfbfbf;
	}

	#menu_overview {
		margin-right: 10px;
	}
	#menu_overview a {
		font-size: 17px;
		padding-bottom: 7px;
		color: rgb(226,226,226);
		padding-top: 12px;
	}
	.menu_topics a {
		color: #cfcfcf;
	}
}

@media (max-width: 750px) and (min-width: 600px) {
	ul {
		padding-left: 16px;
	}
	#menu_overview {
		margin-right: 12px;
	}
	#menu_overview a {
		font-size: 19px;
		padding-bottom: 5px;
		color: rgb(231,231,231);
		padding-top: 11px;
	}
	li a {
		padding-bottom: 13px;
		font-size: 16px;
		color: #cfcfcf;
	}
	.menu_topics a {
		color: #dddddd;
	}
}

@media (max-width: 750px) {
	nav.nav {
		background: #2a2a2a;
		width: 100%;
	}
	ul {
		display: flex;
		padding-right: 0px;
	}
	li {
		float: left;
		margin-right: 6px;
	}
	li a {
		padding-top: 14px;
		display: inline-block;
	}
	.menu_topics a {
		padding-bottom: 15px;
		border: none;
	}

	.right_of_nav {
		width: auto;
		padding: 0px;
	}
	.user_box {
		display: none;
	}

	#back {
		flex-direction: column;
	}
}

@media(max-width: 850px) {
	/**/
}

@media(min-width: 1010px) {
	.container {
		background-color: var(--second-dark-background);
	}
	#back, .footer {
		width: 1000px;
		margin-left: auto;
		margin-right: auto;
	}
	.footBlock {
		display: flex;
	}
	.footer {
		display: flex;
		flex-direction: column;
	}

	.userinfo {
		width: 180px;
		padding-bottom: 18px;
	}
	.userinfo .avatar_item {
		height: 64px;
		width: 64px;
		background-size: 88px;
	}
	.userinfo .the_name {
		font-size: 19px;
	}
	.userinfo .post_tag {
		font-size: 17px;
	}
}
/* ... */

